exports[`test CropForm does render 1`] = `
<div
  className="row">
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Offset X
      </label>
      <input
        className="rka-input-txt"
        name="x"
        onChange={[Function]}
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Offset Y
      </label>
      <input
        className="rka-input-txt"
        name="y"
        onChange={[Function]}
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Width
      </label>
      <input
        className="rka-input-txt"
        disabled={false}
        name="width"
        onChange={[Function]}
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Height
      </label>
      <input
        className="rka-input-txt"
        disabled={false}
        name="height"
        onChange={[Function]}
        type="text"
        value="" />
    </div>
  </div>
</div>
`;

exports[`test CropForm does render with parameters 1`] = `
<div
  className="row">
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Offset X
      </label>
      <input
        className="rka-input-txt"
        name="x"
        onChange={[Function]}
        type="text"
        value={1} />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Offset Y
      </label>
      <input
        className="rka-input-txt"
        name="y"
        onChange={[Function]}
        type="text"
        value={2} />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Width
      </label>
      <input
        className="rka-input-txt"
        disabled={false}
        name="width"
        onChange={[Function]}
        type="text"
        value={100} />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Height
      </label>
      <input
        className="rka-input-txt"
        disabled={false}
        name="height"
        onChange={[Function]}
        type="text"
        value={100} />
    </div>
  </div>
</div>
`;

exports[`test CropForm does render with parameters and disabled width/height setting 1`] = `
<div
  className="row">
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Offset X
      </label>
      <input
        className="rka-input-txt"
        name="x"
        onChange={[Function]}
        type="text"
        value={1} />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Offset Y
      </label>
      <input
        className="rka-input-txt"
        name="y"
        onChange={[Function]}
        type="text"
        value={2} />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Width
      </label>
      <input
        className="rka-input-txt"
        disabled={true}
        name="width"
        onChange={[Function]}
        type="text"
        value={1} />
    </div>
  </div>
  <div
    className="col-md-3 col-sm-3">
    <div
      className="rka-form-group">
      <label
        className="rka-label">
        Height
      </label>
      <input
        className="rka-input-txt"
        disabled={true}
        name="height"
        onChange={[Function]}
        type="text"
        value={1} />
    </div>
  </div>
</div>
`;
